@startuml

title __COLLECTIONS's Class Diagram__\n

  package sample {
    package sample.collections {
      class AudioSystemService {
          - customers : Repository<Customer>
          - devices : Repository<Device>
          - products : Repository<Product>
          + AudioSystemService()
          + getCustomers()
          + getDevices()
          + getProducts()
          + insertCustomer()
          + insertDevice()
          + insertProduct()
          + updateCustomer()
          + updateDevice()
          + updateProduct()
          + deleteCustomer()
          + deleteDevice()
          + deleteProduct()
      }
    }
  }
  

  package sample {
    package sample.collections {
      class MySqlCustomerRepository {
          - st : Statement
          + MySqlCustomerRepository()
          + getAll()
          + update()
          + insert()
          + delete()
      }
    }
  }
  

  package sample {
    package sample.collections {
      class MySqlDeviceRepository {
          - st : Statement
          + MySqlDeviceRepository()
          + getAll()
          + update()
          + insert()
          + delete()
      }
    }
  }
  

  package sample {
    package sample.collections {
      class MySqlProductRepository {
          - st : Statement
          + MySqlProductRepository()
          + getAll()
          + update()
          + insert()
          + delete()
      }
    }
  }
  

  package sample {
    package sample.collections {
      interface Repository {
          {abstract} + getAll()
          {abstract} + update()
          {abstract} + insert()
          {abstract} + delete()
      }
    }
  }
  

  MySqlCustomerRepository -up-|> Repository
  MySqlDeviceRepository -up-|> Repository
  MySqlProductRepository -up-|> Repository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
